--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
+    "emailjs-com": "^3.2.0",
     "gsap": "^3.12.5",
     "i18next": "^23.16.0",
     "react": "^18.3.1",
