--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
+    "animate.css": "^4.1.1",
     "emailjs-com": "^3.2.0",
     "gsap": "^3.12.5",
     "i18next": "^23.16.0",
     "react": "^18.3.1",
+    "react-animate-on-scroll": "^2.1.9",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.3",
     "react-icons": "^5.3.0",
